src/styles/styles.css
* {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

.app {
  overflow: hidden;
}

body {
  margin: 0;
  padding: 0;
  width: 100vw;
  height: 100vh;
}

body #root {
  width: 100vw;
  height: 100vh;
}

.alone {
  width: 100%;
  height: 35vw;
  -o-object-fit: cover;
     object-fit: cover;
  -o-object-position: 0% 40%;
     object-position: 0% 40%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 0;
}

.laptop {
  width: 42vw;
  height: 30vw;
}

.community {
  width: 100%;
  height: 34vw;
  -o-object-fit: cover;
     object-fit: cover;
  -o-object-position: 0% 50%;
     object-position: 0% 50%;
  z-index: 0;
}
/*# sourceMappingURL=styles.css.map */

